[package]
edition = "2021"
name = "specialscout-db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev.package."*"]
# opt-level = 3

[dependencies]
actix-web = "3.3"
sqlx = {version = "0.5", default-features = false, features = ["runtime-async-std-native-tls", "sqlite", "macros"]}
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
